EpdProfiles.getIndicators() should return an empty list
when the field is null. Also, it is generally more safe to return
Collections.emptyList() instead of List.of (as the latter breaks
when sorting it or on contains-checks).