@@ -1,16 +1,18 @@
 package org.openlca.ilcd.flows.epd.matml;
 
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+
+import org.openlca.commons.Copyable;
+import org.openlca.ilcd.Vocab;
+import org.openlca.ilcd.util.Val;
+
 import jakarta.xml.bind.annotation.XmlAccessType;
 import jakarta.xml.bind.annotation.XmlAccessorType;
 import jakarta.xml.bind.annotation.XmlElement;
 import jakarta.xml.bind.annotation.XmlElementWrapper;
 import jakarta.xml.bind.annotation.XmlType;
-import org.openlca.ilcd.Vocab;
-import org.openlca.commons.Copyable;
-import org.openlca.ilcd.util.Val;
-
-import java.util.ArrayList;
-import java.util.List;
 
 @XmlAccessorType(XmlAccessType.FIELD)
 @XmlType(name = "MatML_Doc", propOrder = {"materials", "properties"})
@@ -26,11 +28,11 @@ public class MaterialDoc implements Copyable<MaterialDoc> {
 	// region getters
 
 	public List<Material> getMaterials() {
-		return materials != null ? materials : List.of();
+		return materials != null ? materials : Collections.emptyList();
 	}
 
 	public List<PropertyDetails> getProperties() {
-		return properties != null ? properties : List.of();
+		return properties != null ? properties : Collections.emptyList();
 	}
 
 	// endregion
