@@ -1,19 +1,20 @@
 package org.openlca.ilcd.processes.epd;
 
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+
+import org.openlca.commons.Copyable;
+import org.openlca.ilcd.Vocab;
+import org.openlca.ilcd.commons.Extension;
+import org.openlca.ilcd.commons.Ref;
+import org.openlca.ilcd.util.Val;
+
 import jakarta.xml.bind.annotation.XmlAccessType;
 import jakarta.xml.bind.annotation.XmlAccessorType;
 import jakarta.xml.bind.annotation.XmlAnyElement;
 import jakarta.xml.bind.annotation.XmlElement;
 import jakarta.xml.bind.annotation.XmlElementWrapper;
-import org.openlca.ilcd.Vocab;
-import org.openlca.commons.Copyable;
-import org.openlca.ilcd.commons.Extension;
-import org.openlca.ilcd.commons.Ref;
-import org.openlca.ilcd.util.Val;
-
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
 
 @XmlAccessorType(XmlAccessType.FIELD)
 public class EpdRepresentativenessExtension
@@ -36,11 +37,11 @@ public class EpdRepresentativenessExtension
 	}
 
 	public List<EpdManufacturer> getManufacturers() {
-		return manufacturers != null ? manufacturers : List.of();
+		return manufacturers != null ? manufacturers : Collections.emptyList();
 	}
 
 	public List<Object> getAny() {
-		return any != null ? any : List.of();
+		return any != null ? any : Collections.emptyList();
 	}
 
 	// endregion
